# web_wasm_base

./: .gitignore  Cargo.toml  README.md
entry/: Cargo.toml
entry/src/: app.rs
static/: Trunk.toml  package.json
static/src/: index.html
static/src/css/: base.css
