[package]
name = "entry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 框架
yew = "0.19"

#路由
yew-router = { version="0.16"}
# 异步网络请求依赖
#reqwest = {version = "0.11", features = ["json"]}
#wasm-bindgen-futures = "0.4"
# 序列化
#serde = {version = "1.0", features = ["derive"]}
# 日志
#log = "0.4"
#wasm-logger = "0.2"

#工具类
#gloo = "0.6"
#thiserror = "1"
[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "NodeList",
  "Window",
  "HtmlCollection",
  "HtmlInputElement",
]